# songmaker

./: .env.example  .gitignore  ATLASCLOUD_VIDEO_API_GUIDE.md  CLAUDE.md  CLAUDE_INIT_PROMPT.md  LICENSE  PLAN_VISUAL_WORKSHOP.md  README.md  pyproject.toml  requirements.txt  run.sh  test_wan22.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  concept_agent.py  lyrics_agent.py  script_agent.py  visual_agent.py  visual_style_agent.py
src/services/: __init__.py  animation_chainer.py  assemblyai_processor.py  atlascloud_animator.py  audio_processor.py  bytedance_lipsync_animator.py  cinematography.py  coreml_upscaler.py  demucs_separator.py  image_generator.py  kling_animator.py  lip_sync_animator.py  movie_image_generator.py  mps_upscaler.py  prompt_animator.py  seedance_animator.py  subtitle_generator.py  tts_service.py  veo3_generator.py  veo_animator.py  video_generator.py  video_upscaler.py  wan_s2v_animator.py
src/ui/: __init__.py  app.py
src/ui/components/: chat_bubbles.py  state.py  wizard.py
src/ui/page_modules/: __init__.py  _complete.py  _concept.py  _generate.py  _lyrics.py  _movie.py  _upload.py  _visual.py
tests/: __init__.py  test_models.py  test_subtitle_generator.py  test_video_generator.py  test_visual_agent.py
