[project]
name = "songmaker"
version = "0.1.0"
description = "AI-powered song concept to music video generator with synchronized lyrics"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]

dependencies = [
    # Core AI
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "pydantic>=2.9.0",

    # Audio Processing
    "whisperx>=3.1.0",
    "faster-whisper>=1.1.0",
    "pydub>=0.25.1",

    # Video/Image Processing
    "Pillow>=10.4.0",

    # UI
    "streamlit>=1.40.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
gpu = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "ctranslate2>=4.4.0",
]

[project.scripts]
songmaker = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
