[project]
name = "songmaker"
version = "0.1.0"
description = "AI-powered song concept to music video generator with synchronized lyrics"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
keywords = ["ai", "music", "video", "karaoke", "lyrics", "song", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    # Core AI
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "pydantic>=2.9.0",

    # Audio Processing
    "whisperx>=3.1.0",
    "faster-whisper>=1.1.0",
    "pydub>=0.25.1",
    "assemblyai>=0.35.0",

    # Text-to-Speech (Movie Mode)
    "openai>=1.0.0",
    "elevenlabs>=2.0.0",
    "edge-tts>=6.0.0",

    # Video/Image Processing
    "Pillow>=10.4.0",
    "numpy>=1.24.0",

    # Lip Sync Animation
    "gradio_client>=1.4.0",
    "fal-client>=0.5.0",

    # UI
    "streamlit>=1.40.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]
gpu = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "ctranslate2>=4.4.0",
]
demucs = [
    "demucs>=4.0.0",
]
all = [
    "songmaker[dev,gpu,demucs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/songmaker"
Documentation = "https://github.com/yourusername/songmaker#readme"
Repository = "https://github.com/yourusername/songmaker"
Issues = "https://github.com/yourusername/songmaker/issues"

[project.scripts]
songmaker = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
